--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Weather App</title>
 </head>
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
