--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <title>Weather App</title>
   </head>
   <body>
+    <div class="container">
+        
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
