--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   </head>
   <body>
     <div class="container">
-        
+        <div class="weather-app">
+            
+        </div>
     </div>
     <script src="script.js"></script>
   </body>
