Added HTML form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
   <body>
     <div class="container">
         <div class="weather-app">
-            
+            <form class="search-form" id="search-form">
+                <div class="row">
+                    <div class="col-9">
+                        <input
+                type="search"
+                placeholder="Type a city.."
+                id="city-input"
+                autofocus="on"
+                autocomplete="off"
+                class="form-control shadow-sm"
+              />
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
     <script src="script.js"></script>
