--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
   </head>
   <body>
     <div class="container">
-        <div class="weather-app">
-            <form class="search-form" id="search-form">
-                <div class="row">
-                    <div class="col-9">
-                        <input
+      <div class="weather-app">
+        <form class="search-form" id="search-form">
+          <div class="row">
+            <div class="col-9">
+              <input
                 type="search"
                 placeholder="Type a city.."
                 id="city-input"
                 autofocus="on"
                 autocomplete="off"
-                class="form-control shadow-sm"
+                class="form-control shadow-sm" />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="form-control btn btn-primary shadow-sm"
               />
-                    </div>
-                </div>
-            </form>
-        </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
