--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                 class="form-control btn btn-primary shadow-sm"
               />
             </div>
+            <div class="col-3">
+              <button
+                class="btn btn-success w-100"
+                id="current-location-button"
+              >
+                Current
+              </button>
+            </div>
           </div>
         </form>
       </div>
