Added city and weather properties

--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
             </div>
           </div>
         </form>
+        <h1 id="city">
+          Lviv, Ukraine
+        </h1>
+        <ul>
+          <li class="today" id="date"></li>
+          <li>
+            Partly Cloudy
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <div class="clearfix">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                alt="Cloudy icon"
+                class="weather-icon float-left"
+              />
+              <div class="float-left">
+                <span class="temperature" id="temperature">19</span>
+                <span class="units"><a href="#" id="celsius">°C</a> </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>
+                Precipitation: 0%
+              </li>
+              <li>
+                Humidity: 77%
+              </li>
+              <li>
+                Wind: 8 km/h
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
