--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
             </ul>
           </div>
         </div>
+         
       </div>
+      <small>
+        <a href="https://github.com/ToriCodesVB/Weather-App">Open-source code</a>
+        , by Viktoriia Baburkina
+      </small>
     </div>
+   
     <script src="script.js"></script>
   </body>
 </html>
